# CMakeTemplate

./: CMakeLists.txt  README.md  main.cpp  tasks.py
src/: CMakeLists.txt  app.cpp  app.hpp
test/: CMakeLists.txt
